<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp"
    android:gravity="end"
    android:orientation="vertical">

    <TextView
        android:id="@+id/message_sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="2dp"
        android:foregroundGravity="clip_vertical"
        android:text="@string/chat_other_msg_username"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/message_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:contentDescription="@string/chat_other_msg_logo_descr"
            android:src="@drawable/placeholder_logo"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/own_message_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="#BFBFBF"
            android:maxWidth="200dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/chat_other_msg_message"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/message_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="2dp"
            android:text="@string/chat_other_msg_time"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>