<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".fragment.SettingsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/languages_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/language_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.621">

        <AutoCompleteTextView
            android:id="@+id/languages_selection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:textColor="?attr/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/light_theme" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@drawable/dark_theme" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/theme"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/theme_settings"
        app:layout_constraintBottom_toTopOf="@+id/languages_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842">

        <AutoCompleteTextView
            android:id="@+id/themes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:textColor="?attr/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/apply_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_settings1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languages_wrapper"
        app:layout_constraintVertical_bias="0.493" />

</androidx.constraintlayout.widget.ConstraintLayout>