<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.GameFragment">

    <!-- TODO: Update blank fragment layout -->


    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp" />

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="60dp"
        android:background="?attr/colorOnPrimary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="265dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_current_round"
                android:layout_width="261dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="200dp"
                android:text="@string/round_number_game"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/game_current_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="200dp"
                android:text="45"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_current_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_guess_word"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/game_current_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Role"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/game_team_guess"
                android:textSize="30sp" />

            <Button
                android:id="@+id/ask_hint_game_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:text="@string/game_ask_hint" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="534dp"
            android:layout_marginEnd="20dp"
            android:background="?attr/colorOnPrimary"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/game_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="0-0"
                android:textColor="?attr/colorPrimary"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/team1_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/colorOnPrimary"
                android:text="@string/team_1_game"
                android:textColor="?attr/colorPrimary"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/team1player1_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/placeholder_logo"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/team1player1_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/team1player2_avatar"
                    android:layout_width="50dp"
                    android:layout_height="65dp"
                    android:src="@drawable/placeholder_logo"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/team1player2_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/team2_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="?attr/colorOnPrimary"
                android:text="@string/team_2_game"
                android:textColor="?attr/colorPrimary"
                android:textSize="30sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/team2player1_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/placeholder_logo"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/team2player1_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/team2player2_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/placeholder_logo"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/team2player2_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14dp" />

            </LinearLayout>
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/draw_fragment"
            android:name="com.example.thin_client.fragment.DrawFragment"
            android:layout_width="600dp"
            android:layout_height="535dp"
            android:background="@color/black"></androidx.fragment.app.FragmentContainerView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>